# pyrldev

./: .gitignore  AGENTS.md  README.md  SEEN0000.TXT  SEEN0001.TXT  TRANSLATION_GUIDE.md  pyproject.toml
kprl/: __init__.py  __main__.py  archive.py  assemble.py  bytecode.py  disasm.py  g00.py  gan.py  kfn.py  pdt.py  rc8.py  rct.py  rlcmp.py
tests/: test_kprl.py
